2018/05/23 ver1.6
Suppress flicker of menu displaying URL

2018/05/14 ver1.5
Show command line option error

2018/05/03 ver1.4
status bar
command line

2018/04/27 ver1.3
No script feature

2018/04/19 ver1.2
*.url arg can be accepted
Drag and Drop

2018/01/08 ver1.1
Command line option "browseremulation"

2017/12/29 ver1.0