@@ -1,1 +1,4 @@
 # SimpBrowser
+
+SimpBrowser is Light-weight web browser.
+
