@@ -156,7 +156,7 @@ CAPTION "About SimpBrowser"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     ICON            IDR_MAINFRAME,IDC_STATIC,11,17,20,20
-    LTEXT           "SimpBrowser Version 1.6",IDC_STATIC,40,10,119,8,SS_NOPREFIX
+    LTEXT           "SimpBrowser Version 1.7",IDC_STATIC,40,10,119,8,SS_NOPREFIX
     LTEXT           "Copyright (C) 2018",IDC_STATIC,40,25,119,8
     DEFPUSHBUTTON   "OK",IDOK,178,7,50,14,WS_GROUP
 END
@@ -348,9 +348,9 @@ END
 
 STRINGTABLE
 BEGIN
-    ID_STATUS_SETFORM       "SetForm"
-    ID_STATUS_PROXY         "PreConfig"
-    ID_STATUS_AMBIENT       "      "
+    ID_STATUS_SETFORM       "             "
+    ID_STATUS_PROXY         "             "
+    ID_STATUS_AMBIENT       "       "
 END
 
 #endif    // Neutral resources
